PRE-129 fix missing space under line

--- a/views/css/admin.css
+++ b/views/css/admin.css
@@ -203,11 +203,11 @@ label.payplugSwitch_label {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
-  -webkit-transition: background 0.4s/1.5;
-  -moz-transition: background 0.4s/1.5;
-  -ms-transition: background 0.4s/1.5;
-  -o-transition: background 0.4s/1.5;
-  transition: background 0.4s/1.5;
+  -webkit-transition: background 0.26666667s;
+  -moz-transition: background 0.26666667s;
+  -ms-transition: background 0.26666667s;
+  -o-transition: background 0.26666667s;
+  transition: background 0.26666667s;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
@@ -569,7 +569,7 @@ button.payplugLink:hover {
   margin: 0 5px 0 0;
 }
 .payplugInstallment_fieldset input[type=text] {
-  width: 70px;
+  width: 50px;
   height: 28px;
   margin: 0 5px 0 0;
 }
