--- a/views/css/front_1_6.css
+++ b/views/css/front_1_6.css
@@ -676,7 +676,7 @@
 }
 @media (max-width: 767px) {
   .oneyPopin_legal {
-    padding: 0 0 15px;
+    padding: 10px 0 15px;
   }
 }
 .oneyPopin_close {
